Fixed buttons on Mobile Remote control for ios9

--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/css/index.css
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/css/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 input[type=text] {
-    font-size: 20px;
+    font-size: 18px;
     
     /*border: none;*/ /*turns off border on the URL element text box*/
     border-style: inset;
@@ -145,13 +145,13 @@ left: 10%;
     float: left;
     display: inline-block;
     height: 20%px;
-    width: 23.5%;
-    font-size: 36px;
+    width: 23.3%;
+    font-size: 30px;
     font-weight: bold;
     border-width: 4px;
     border-style: solid;
     border-color: blue;
-    border-radius: 25px;
+    border-radius: 1px;
 }
 
 .buttons_off {
